# fake_full_screen

./: .gitignore  Cargo.toml  README.md  RUST_CONCEPTS.md
src/: app.rs  main.rs  region.rs  theme.rs  vlc.rs
