[package]
name = "fake_full_screen"
version = "0.1.0"
edition = "2024"

[dependencies]
dark-light = "2.0.0"
eframe = { version = "0.34.3", features = ["wgpu"] }
egui = "0.34.3"

# Win32 API access for borderless-fullscreen window manipulation on Windows.
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["errhandlingapi", "winuser", "windef", "minwindef"] }
